Testing footer spacing fix

--- a/resources/css/aboutme.css
+++ b/resources/css/aboutme.css
@@ -44,9 +44,9 @@ nav a:hover::before {
 
 body {
   background-color: #EDC7B7;
+  height: calc(100vh - 100px);
 }
 
 footer {
   color: #AC3B61;
-  position: relative;
 }
